fixed description text box causing overflow for small viewport

--- a/src/apps/schema/src/app/views/SchemaEdit/SchemaMeta/Settings/Settings.less
+++ b/src/apps/schema/src/app/views/SchemaEdit/SchemaMeta/Settings/Settings.less
@@ -1,9 +1,13 @@
 .ModelSettings {
   background-color: #f2f7fc !important;
+  .FieldTypeTextarea {
+    min-width: auto;
+  }
 }
 
 .CardFooter {
   button {
     margin-right: 8px;
+    margin-bottom: 8px;
   }
 }
